--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,8 +86,8 @@ play.modules.enabled += "config.DIModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "ALPHA"
-    endpoints.enabled = false
+    status = "BETA"
+    endpoints.enabled = true
   }
 
   confidence-level-check {
@@ -123,13 +123,6 @@ auditing {
       host = localhost
       port = 8100
     }
-  }
-}
-
-feature-switch {
-
-  version-1 {
-    enabled = true
   }
 }
 
