--- a/conf/application.conf
+++ b/conf/application.conf
@@ -118,6 +118,9 @@ feature-switch {
   r10-fields {
     enabled = false
   }
+  r10-IFS {
+    enabled = true
+  }
 }
 
 # Microservice specific config
@@ -161,6 +164,14 @@ microservice {
       token = ABCD1234
       environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
+
+      ifs {
+          host = 127.0.0.1
+          port = 9772
+          env = Prod
+          token = ABCD1234
+          environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+        }
   }
 }
 
