--- a/conf/application.conf
+++ b/conf/application.conf
@@ -126,6 +126,11 @@ feature-switch {
     enabled = true
     released-in-production = false
   }
+
+  endpoint-2089 {
+     enabled = true
+     released-in-production = false
+  }
 }
 
 # Microservice specific config
