--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,7 +116,8 @@ metrics {
   enabled = true
 }
 
-# Feature switches
+# Feature Switches
+# `released-in-production` setting is only used in ET and shouldn't be in the production config
 feature-switch {
   retrieveAdditionalFields {
     enabled = true
